--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,14 +8,14 @@
     <name>HackITall</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>
+    <vendor email="support@hackitall.com" url="https://www.hackitall.com">HackITall</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    This plugin provides tools and utilities for hacking and cybersecurity.<br>
+    <em>Supports various HTML tags for formatting</em>
   ]]></description>
 
     <!-- Product and plugin compatibility requirements.
@@ -27,4 +27,14 @@
     <extensions defaultExtensionNs="com.intellij">
 
     </extensions>
+
+    <actions>
+        <action
+                id="com.hackitall.actions.hello_world.HelloWorldAction"
+                class="com.hackitall.actions.hello_world.HelloWorldAction"
+                text="Say Hello"
+                description="Displays a greeting">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+    </actions>
 </idea-plugin>
