--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,9 +31,9 @@
     <action
         id="com.hackitall.actions.PopupDialogAction"
         class="com.hackitall.actions.PopupDialogAction"
-        text="Popup Dialog Action"
+        text="Generate Kdoc type documentation"
         description="SDK action example">
-        <add-to-group group-id="ToolsMenu" anchor="first"/>
+        <add-to-group group-id="EditorPopupMenu" anchor="last"/>
     </action>
 
 </actions>
