implement test cases

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,23 +8,41 @@
     <name>HackITall</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>
+    <vendor email="support@hackitall.com" url="https://www.hackitall.com">HackITall</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
-  ]]></description>
+    This plugin provides tools and utilities for hacking and cybersecurity.<br>
+    <em>Supports various HTML tags for formatting</em>
+    ]]></description>
 
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
+    <depends>org.jetbrains.kotlin</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
     </extensions>
+
+    <actions>
+        <action
+                id="com.hackitall.actions.HelloWorldAction"
+                class="com.hackitall.actions.HelloWorldAction"
+                text="Popup Dialog Action"
+                description="SDK action example">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+        <action id="GenerateTestsAction"
+                class="com.hackitall.actions.GenerateTestsAction"
+                text="Generează Teste"
+                description="Creează fișier JUnit pentru metodele Kotlin">
+            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
+        </action>
+
+
+    </actions>
 </idea-plugin>
