--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,8 +29,8 @@
 
 <actions>
     <action
-        id="com.hackitall.actions.PopupDialogAction"
-        class="com.hackitall.actions.PopupDialogAction"
+        id="com.hackitall.actions.GenerateKdoc"
+        class="com.hackitall.actions.GenerateKdoc"
         text="Generate Kdoc type documentation"
         description="SDK action example">
         <add-to-group group-id="EditorPopupMenu" anchor="last"/>
