--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -55,12 +55,11 @@
         <action
                 id="com.hackitall.actions.GenerateBoilerplateCodeAction"
                 class="com.hackitall.actions.GenerateBoilerplateCodeAction"
-                text="Speech To Text"
+                text="Generate Boilerplate Code"
                 description="GenerateBoilerplate">
             <add-to-group group-id="ToolsMenu" anchor="first"/>
         </action>
-    </actions>
-</idea-plugin>
+        <action
                 id="com.hackitall.actions.GenerateKdoc"
                 class="com.hackitall.actions.GenerateKdoc"
                 text="Generate Kdoc type documentation"
